--- a/css/style.css
+++ b/css/style.css
@@ -4228,3 +4228,18 @@ html.is-animating .mil-menu-frame {
   -webkit-transition-delay: 0.3s;
           transition-delay: 0.3s;
 }
+
+
+
+
+/* css written by SIDDIQUE */
+
+.custlogo{
+  height: auto;
+  width: 200px;
+}
+.custoutline{
+  height: auto;
+  width: 300px;
+
+}
