--- a/css/style.css
+++ b/css/style.css
@@ -4243,3 +4243,32 @@ html.is-animating .mil-menu-frame {
   width: 300px;
 
 }
+
+
+/* Video styling */
+
+.video-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: whitesmoke;
+  padding: 3vh;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+#play-pause-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: none;
+  border: none;
+  color: white;
+  font-size: 5vw; /* Adjust size relative to viewport width */
+  cursor: pointer;
+}
