--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,11 @@ a {
   color: rgb(0, 0, 0);
 }
 
+.mil-red{
+  color:red;
+}
+
+
 .mil-light-soft {
   color: rgba(255, 255, 255, 0.4);
 }
@@ -1032,7 +1037,8 @@ preloader
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+
 }
 .mil-preloader .mil-preloader-animation {
   opacity: 0;
