--- a/css/style.css
+++ b/css/style.css
@@ -613,7 +613,7 @@ button
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  padding: 10px;
+  padding: 5px;
   background-color: rgb(0, 0, 0);
   -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
   transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
@@ -1237,8 +1237,8 @@ frame
 @media screen and (max-width: 1200px) {
   .mil-frame .mil-frame-top {
     height: 90px;
-    background-color: rgba(0, 0, 0, 0.95);
-    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+    background-color: rgb(255, 255, 255);
+    border-bottom: solid 1px rgb(255, 255, 255));
     padding: 0 30px;
     -webkit-backdrop-filter: blur(8px);
             backdrop-filter: blur(8px);
@@ -1247,7 +1247,7 @@ frame
     color: rgb(255, 255, 255);
   }
   .mil-frame .mil-frame-top .mil-menu-btn span, .mil-frame .mil-frame-top .mil-menu-btn span:after, .mil-frame .mil-frame-top .mil-menu-btn span:before {
-    background: rgb(255, 255, 255);
+    background: black;
   }
 }
 .mil-frame .mil-frame-bottom {
@@ -1377,7 +1377,7 @@ menu
   z-index: 9;
   width: 100%;
   height: 100vh;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   opacity: 0;
   pointer-events: none;
   -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
@@ -1546,7 +1546,7 @@ menu
       -ms-flex-align: center;
           align-items: center;
   font-weight: 500;
-  color: rgba(255, 255, 255, 0.8);
+  color: black;
   font-size: 34px;
   -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
   transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
@@ -1687,7 +1687,7 @@ banner
 }
 .mil-banner .mil-banner-content {
   width: 100%;
-  padding-bottom: 120px;
+  padding-top: 35vh;
   position: relative;
 }
 @media screen and (max-width: 992px) {
@@ -1864,7 +1864,7 @@ circle text
 .mil-circle-text {
   position: absolute;
   right: 0;
-  bottom: 90px;
+  bottom: 0.5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1876,6 +1876,7 @@ circle text
           align-items: center;
   width: 140px;
   height: 140px;
+  fill: black
 }
 .mil-circle-text .mil-ct-svg {
   -webkit-transform: scale(2);
@@ -1884,7 +1885,7 @@ circle text
   height: 140px;
 }
 .mil-circle-text .mil-ct-svg text {
-  fill: rgba(255, 255, 255, 0.4);
+  fill: black;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 500;
@@ -1895,11 +1896,12 @@ circle text
   position: absolute;
 }
 .mil-circle-text:hover svg text {
-  fill: rgb(255, 255, 255);
+  fill: black;
 }
 @media screen and (max-width: 992px) {
   .mil-circle-text {
     display: none;
+    fill: black
   }
 }
 
@@ -2650,7 +2652,7 @@ social icons
   margin-right: 0;
 }
 .mil-social-icons li a {
-  color: rgb(255, 255, 255);
+  color: black;
   font-size: 18px;
   -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
   transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
@@ -3028,7 +3030,7 @@ footer
   display: block;
   font-weight: 500;
   font-size: 28px;
-  color: rgba(255, 255, 255, 0.9);
+  color: black;
   -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
   transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
 }
@@ -3063,8 +3065,8 @@ footer
 .mil-subscribe-form input {
   height: 100%;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.1);
-  color: rgb(0, 0, 0);
+  /* background-color: rgba(255, 255, 255, 0.1); */
+  color: white;
   font-size: 12px;
   font-weight: 500;
   text-transform: uppercase;
@@ -4256,14 +4258,14 @@ html.is-animating .mil-menu-frame {
 .video-container {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 90%;
   background-color: whitesmoke;
   padding: 3vh;
 }
 
 video {
   width: 100%;
-  height: 100%;
+  height: 90%;
   object-fit: contain;
 }
 
@@ -4277,4 +4279,9 @@ video {
   color: white;
   font-size: 5vw; /* Adjust size relative to viewport width */
   cursor: pointer;
+}
+
+/*  */
+.custrow{
+  justify-content: space-evenly;
 }
