nav bar white fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,4 @@
-/* -------------------------------------------
-
-Name: 		Ruizarch
-Version:    1.0
-Developer:	Nazar Miller (millerDigitalDesign)
-Portfolio:  https://themeforest.net/user/millerdigitaldesign/portfolio?ref=MillerDigitalDesign
-
-p.s. I am available for Freelance hire (UI design, web development). email: miller.themes@gmail.com
-
-------------------------------------------- */
-/*--------------------------------------------
-
+/* 
 1. common
     - main
     - typography
@@ -46,9 +35,9 @@ p.s. I am available for Freelance hire (UI design, web development). email: mill
     - 404
     - images
     - page transitions
+ */
 
 
---------------------------------------------*/
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&amp;display=swap");
 @import url(../../../cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css);
 /* -------------------------------------------
@@ -1402,7 +1391,7 @@ menu
   color: rgb(255, 255, 255);
 }
 .mil-menu-frame .mil-frame-top .mil-menu-btn span, .mil-menu-frame .mil-frame-top .mil-menu-btn span:after, .mil-menu-frame .mil-frame-top .mil-menu-btn span:before {
-  background-color: rgb(255, 255, 255);
+  background-color: black;
 }
 .mil-menu-frame .mil-main-menu {
   -webkit-transform: translateX(-30px);
