--- a/css/style.css
+++ b/css/style.css
@@ -4276,21 +4276,39 @@ video {
 }
 
 /* cookie popup css */
+/* Google Fonts - Poppins */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
 .wrapper {
   position: fixed;
   bottom: 50px;
-  right: -370px;
+  left: 50%;
+  transform: translateX(-50%);
   max-width: 345px;
   width: 100%;
   background: #fff;
   border-radius: 8px;
   padding: 15px 25px 22px;
-  transition: right 1s ease;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   z-index: 9999;
+  display: none;
+}
+
+.preloader-complete .wrapper {
+  display: block; 
+
+}
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
 }
 .wrapper.show {
   right: 20px;
+  
 }
 .wrapper header {
   display: flex;
@@ -4351,3 +4369,6 @@ header h2 {
 .cookietxt{
   font-size: 1.5em;
 }
+
+
+
