form txt color changed

--- a/css/style.css
+++ b/css/style.css
@@ -3055,7 +3055,7 @@ footer
   height: 100%;
   width: 100%;
   /* background-color: rgba(255, 255, 255, 0.1); */
-  color: white;
+  color: black;
   font-size: 12px;
   font-weight: 500;
   text-transform: uppercase;
