timeline added to home

--- a/css/style.css
+++ b/css/style.css
@@ -192,10 +192,10 @@ body {
   }
 }
 
-section {
+/* section {
   position: relative;
   overflow: hidden;
-}
+} */
 
 /* -------------------------------------------
 
