--- a/css/timeline.css
+++ b/css/timeline.css
@@ -95,11 +95,17 @@
   background-image: linear-gradient(#97acc5, #2e1daf 28%, #a74ee2 53%, #2a30ae 79%);
   width: 3px;
   height: 50vh;
+  transform: translateX(-50%);
   position: fixed;
   top: 0;
   bottom: 50vh;
-  left: auto;
-  right: auto
+  opacity: 0; /* Initially hide */
+  /* transition: opacity 0.3s ease-in-out; */
+  
+}
+
+.timeline_progress .show {
+  opacity: 1; /* Show when entering the section */
 }
 
 .text-colour-lightgrey {
