--- a/css/timeline.css
+++ b/css/timeline.css
@@ -95,12 +95,14 @@
   background-image: linear-gradient(#97acc5, #2e1daf 28%, #a74ee2 53%, #2a30ae 79%);
   width: 3px;
   height: 50vh;
-  transform: translateX(-50%);
+  /* transform: translateX(-50%); */
+  left: auto;
+  right: auto;
   position: fixed;
   top: 0;
   bottom: 50vh;
   opacity: 0; /* Initially hide */
-  /* transition: opacity 0.3s ease-in-out; */
+  transition: opacity 0.3s ease-in-out;
   
 }
 
@@ -162,7 +164,7 @@
 
 .timeline_progress {
   z-index: -2;
-  background-color: var(--darkest);
+  background-color: var(--white);
   width: 3px;
   height: 100%;
   position: absolute
