--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,5 +1,7 @@
 
 :root {
+  --maroon:#972221;
+  --orange:#f89c1f;
   --darkest: #0f0d11;
   --blue: #222acc;
   --120: 120px;
@@ -75,7 +77,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 50vh;
-  box-shadow: 0 0 0 8px #2a30ae
+  box-shadow: 0 0 0 8px var(--orange)
 }
 
 .timeline_quote-text-wrapper {
@@ -90,9 +92,9 @@
 
 .timeline_progress-bar {
   z-index: -1;
-  background-color: var(--light-1);
+  /* background-color: var(--light-1); */
   color: var(--darkest);
-  background-image: linear-gradient(#97acc5, #2e1daf 28%, #a74ee2 53%, #2a30ae 79%);
+  background-color: var(--orange);
   width: 3px;
   height: 50vh;
   /* transform: translateX(-50%); */
