--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ main
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  padding-bottom: 5px;
 }
 
 html,
@@ -5048,4 +5049,52 @@ transform: scale(1.2); /* Zoom in when not hovering */
   #container-fp {
     padding: 2em 1em; /* Adjust padding for smaller screens */
   }
+}
+
+
+/* counter */
+.counter-section {
+  position: relative;
+  background-color: #f7f7f7;
+  padding: 50px 0;
+}
+
+.bg-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.5;
+}
+
+.counter-box {
+  text-align: center;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.counter-box i {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.counter-box p {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.counter {
+  font-size: 36px;
+  font-weight: bold;
+  color: black;
+}
+
+.counter-box:hover {
+  background-color: #f2f2f2;
+  cursor: pointer;
 }
