--- a/css/style.css
+++ b/css/style.css
@@ -5099,4 +5099,141 @@ transform: scale(1.2); /* Zoom in when not hovering */
   cursor: pointer;
 }
 
+/* section */
+/* CSS */
+.special-section {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #fff;
+  padding: 20px;
+}
 
+.video-container {
+  flex-basis: 40%;
+  margin-right: 20px;
+}
+
+.video-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content-container {
+  flex-basis: 60%;
+}
+
+.features-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.features-list li {
+  margin-bottom: 20px;
+}
+
+.features-list li h3 {
+  cursor: pointer;
+}
+
+.features-list li h3::after {
+  content: "+";
+  font-size: 18px;
+  margin-left: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.features-list li h3.active::after {
+  transform: rotate(45deg);
+}
+
+.feature-description {
+  display: none;
+  margin-top: 10px;
+}
+
+.features-list li.active .feature-description {
+  display: block;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .special-section {
+    flex-direction: column;
+  }
+  .video-container {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+  .content-container {
+    flex-basis: 100%;
+  }
+}
+/* section */
+
+.container-sid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4px;
+}
+
+.video-container {
+  width: 100%;
+  /* max-width: 800px; Set maximum width for the video container */
+  height: auto;
+  background-color: #f0f0f0;
+  margin-top: 20px; /* Add margin to separate video and content */
+}
+
+/* .video {
+  width: 100%;
+  height: auto;
+} */
+
+.content {
+  width: 100%;
+  max-width: 800px; /* Set maximum width for the content */
+  background-color: #fff;
+}
+
+.section {
+  padding: 20px;
+}
+
+.section h2 {
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.expandable {
+  cursor: pointer;
+}
+
+.expanded {
+  display: none;
+}
+
+.expanded.active {
+  display: block;
+}
+
+@media only screen and (min-width: 601px) {
+  .container-sid {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .content {
+    margin-right: 20px; /* Add space between content and video on larger screens */
+  }
+
+  .video-container {
+    margin-top: 0; /* Remove margin top on larger screens */
+  }
+}
