--- a/css/style.css
+++ b/css/style.css
@@ -4892,6 +4892,31 @@ html.is-animating .mil-menu-frame {
   width: 300px;
 
 }
+/* vertical video */
+
+.vertical-video-container {
+  display: flex;
+  align-items: center; /* Align video vertically */
+  justify-content: center; /* Center video horizontally */
+  height: 100vh; /* Adjust as needed */
+}
+
+.video-container-abc {
+  border-radius: 10px;
+  transform: rotate(-90deg);
+  width: 70vh; /* Adjust as needed */
+}
+#pad{
+  margin-bottom: 2vh;
+}
+#pad1{
+  margin-bottom: 7vh;
+}
+.video {
+  width: 100%;
+  height: auto;
+  object-fit: cover; 
+}
 
 
 /* Video styling */
@@ -4901,7 +4926,7 @@ html.is-animating .mil-menu-frame {
   width: 100%;
   height: 90%;
   background-color: whitesmoke;
-  padding: 3vh;
+  /* padding: 3vh; */
 }
 
 video {
@@ -5056,7 +5081,7 @@ transform: scale(1.2); /* Zoom in when not hovering */
 .counter-section {
   position: relative;
   background-color: #f7f7f7;
-  padding: 50px 0;
+  padding: 250px 0;
 }
 
 .bg-image {
@@ -5236,4 +5261,172 @@ ul {
   .video-container {
     margin-top: 0; /* Remove margin top on larger screens */
   }
+}
+
+/* featured services  */
+.services-section {
+  text-align: center;
+  padding: 50px 0;
+  padding: 10px;
+}
+
+.service-box {
+  position: relative;
+  width: calc(33.33% - 22px); 
+  background-color: white;
+  border: 2px solid whitesmoke;
+  display: inline-block;
+  margin: 0 2px; 
+  margin-bottom: 2px;
+  padding: 15px;
+  border-radius: 0;
+  transition: background-color 0.3s;
+  box-sizing: border-box;
+}
+
+.service-box:hover {
+  background-color: #f89c1f;
+  cursor: pointer;
+}
+
+.service-box:hover h3,
+.service-box:hover i {
+  color: #fff;
+}
+
+.service-box h3 {
+  color: #333;
+  font-size: 20px;
+  margin: 0;
+  text-align: left;
+  transition: color 0.3s;
+}
+
+.service-box i {
+  font-size: 24px;
+  margin-bottom: 10px;
+  display: block;
+  color: #333;
+  text-align: left;
+  transition: color 0.3s;
+}
+
+@media (max-width: 768px) {
+  .service-box {
+      width: calc(50% - 22px); /* Adjusted width to account for 2px margin */
+      margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .service-box {
+      width: calc(100% - 22px); /* Adjusted width to account for 2px margin */
+  }
+}
+
+.text-separator {
+  margin: 20px auto;
+  width: 50px;
+  height: 2px;
+  background-color: #333;
+}
+
+.lorem-ipsum {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
+/* WORKS */
+.works {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 80px 0;
+}
+.works .titles {
+  display: block;
+  padding-right: 15%;
+  margin-bottom: 20px;
+}
+.works .titles h2 {
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.works .titles p {
+  font-size: 20px;
+  line-height: 1.5;
+  margin-bottom: 40px;
+  font-weight: 300;
+}
+.works ul {
+  margin-bottom: 0;
+  margin-left: -30px;
+  margin-right: -30px;
+  padding: 0;
+}
+.works ul li {
+  width: 50%;
+  margin: 40px 0;
+  padding: 0 30px;
+  list-style: none;
+}
+
+/* PROJECT BOX */
+.project-box {
+  width: 100%;
+  display: block;
+}
+.project-box .project-image {
+  width: 100%;
+  display: block;
+}
+.project-box .project-image a {
+  display: block;
+}
+.project-box .project-image a img {
+  width: 100%;
+}
+.project-box .project-content {
+  width: 100%;
+  display: block;
+}
+.project-box .project-content h3 {
+  font-size: 27px;
+  display: block;
+}
+.project-box .project-content h3 a {
+  display: block;
+}
+.project-box .project-content h3 a:hover {
+  text-decoration: none;
+}
+.project-box .project-content small {
+  display: block;
+}
+
+.works .container ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.works .container ul li {
+  width: 50%; /* Display two boxes per row */
+  float: left; /* Float boxes to the left */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  padding: 0 15px; /* Add padding to space between the boxes */
+}
+
+/* Clear float after every two boxes to maintain layout */
+.works .container ul:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.project-box {
+  margin-bottom: 30px; /* Add some space between each box */
 }
