--- a/css/contact.css
+++ b/css/contact.css
@@ -13,13 +13,18 @@
   background-color: #edece8;
 }
 
-.txt-thin{
+.txt-thin {
   font-weight: 900;
 }
 
-.image-container-ss {
+.image-container-ss,
+.form-content {
   flex: 1;
   max-width: 50%;
+}
+
+.form-content {
+  padding-left: 20px;
 }
 
 .image-container-ss img {
@@ -28,11 +33,6 @@
   display: block;
 }
 
-.form-content {
-  max-width: 50%;
-  flex: 1;
-  padding-left: 20px;
-}
 
 form {
   margin: 0;
@@ -47,6 +47,7 @@ form>div {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  padding: 0 10px;
 }
 
 .form-group fieldset {
@@ -61,25 +62,98 @@ form>div {
   gap: 4px;
 }
 
-.strch-btn{
+.strch-btn {
   width: 100%;
 }
 
 .form-row {
   display: flex;
   flex-wrap: wrap;
+  margin: 16px 0;
+  gap: 16px;
+  padding: 0 10px;
+}
+
+.form-row>div {
+  flex: 1;
 }
 
 .form-floating {
-  flex: 1 0 calc(50% - 10px); /* Two items per row */
+  flex: 1 0 calc(50% - 10px);
+  /* Two items per row */
   margin-right: 10px;
 }
 
+.did-floating-label-content {
+  position: relative;
+  /* margin-bottom: 20px; */
+}
+
+.did-floating-label {
+  color: black;
+  font-size: 20px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 0 5px;
+  background: #fff;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+.did-floating-input {
+  font-size: 12px;
+  display: block;
+  width: 100%;
+  height: 70px;
+  /* padding: 0 20px; */
+  background: #fff;
+  color: #323840;
+  border: none;
+  border-radius: 16px;
+  box-sizing: border-box;
+}
+
+.did-floating-input:focus~.did-floating-label {
+  top: -8px;
+  font-size: 13px;
+}
+
+.did-floating-input:not(:placeholder-shown)~.did-floating-label {
+  top: -8px;
+  font-size: 13px;
+}
+
+
 @media (max-width: 768px) {
   .form-floating {
-      flex: 1 0 100%; /* One item per row on smaller screens */
-      margin-right: 0;
-      margin-bottom: 10px;
+    flex: 1 0 100%;
+    /* One item per row on smaller screens */
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+}
+
+@media (width < 1024px) {
+  .container-ss {
+    flex-direction: column
+  }
+
+  .image-container-ss,
+  .form-content {
+    flex: 1;
+    max-width: 100%;
+    padding: 0;
+  }
+}
+
+@media (width < 640px) {
+  .form-row {
+    flex-direction: column;
   }
 }
 
