--- a/css/plugins/bootstrap-grid.css
+++ b/css/plugins/bootstrap-grid.css
@@ -111,7 +111,7 @@
 }
 @media (min-width: 1400px) {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
-    max-width: 1200px;
+    /* max-width: 1200px; */
   }
 }
 .row {
