--- a/css/style.css
+++ b/css/style.css
@@ -5290,9 +5290,13 @@ video {
 }
 
 .section {
-  padding: 20px;
+  padding: 20px;margin-top: 19vh;
 }
-
+@media only screen and (max-width: 768px){
+  .section{
+    margin-top: 0;
+  }
+}
 .section h2 {}
 
 ul {
@@ -5459,97 +5463,380 @@ ul {
   margin-bottom: 20px;
 }
 
-/* featured works sid */
+
+/* featured works css sid */
+
 
 .projects-section {
-  padding: 40px;
-  font-family: "Outfit", sans-serif;
+    padding: 40px;
+    font-family: "Outfit", sans-serif;
 }
-.works .titles {
-  display: block;
-  padding-right: 15%;
-  margin-bottom: 20px;
-}
-.works .titles h2 {
-  font-size: 18px;
-  font-weight: 600;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-.works .titles p {
-  font-size: 20px;
-  line-height: 1.5;
-  margin-bottom: 40px;
-  font-weight: 300;
-}
-.works ul {
-  margin-bottom: 0;
-  margin-left: -30px;
-  margin-right: -30px;
-  padding: 0;
-}
-.works ul li {
-  width: 50%;
-  margin: 40px 0;
-  padding: 0 30px;
-  list-style: none;
+
+.heading2s {
+    text-align: right;
 }
 
 .divider {
-  width: 100%;
-  display: block;
-}
-.project-box .project-image {
-  width: 100%;
-  display: block;
-}
-.project-box .project-image a {
-  display: block;
-}
-.project-box .project-image a img {
-  width: 100%;
-}
-.project-box .project-content {
-  width: 100%;
-  display: block;
-}
-.project-box .project-content h3 {
-  font-size: 27px;
-  display: block;
-}
-.project-box .project-content h3 a {
-  display: block;
-}
-.project-box .project-content h3 a:hover {
-  text-decoration: none;
-}
-.project-box .project-content small {
-  display: block;
+    width: 0%;
+    border-bottom: 2px solid black;
+    clear: both;
+    padding-top: 2px;
+    padding-bottom: 8px;
+    transition: width 3s ease;
 }
 
+.divider.animated {
+    width: 100%;
+}
+
+.project {
+    margin-top: 20px;
+}
+
+.project-details {
+    flex: 1;
+    margin-right: 20px;
+    /* padding-left: 8%; */
+    text-align: justify;
+}
+
+.project-details h3 {
+    margin-top: 0;
+}
+
+.buttons {
+    text-align: right;
+}
+
+.image-container2 {
+    flex: 1;
+    text-align: right;
+    border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+    width: 90%;
+    margin-left: auto;
+}
+
+.image-container2 img {
+    width: 100%;
+    border-radius: 15px;
+    position: relative;
+    transition: transform 0.3s ease;
+}
+
+.image-container2:hover img {
+    transform: scale(1.1);
+}
+
+
+
 .location-year {
-  clear: both;
-  margin-top: 10px;
+    clear: both;
+    margin-top: 10px;
 }
 
 .location-year p {
-  margin: 0;
+    margin: 0;
 }
 
-.works .container ul li {
-  width: 50%; /* Display two boxes per row */
-  float: left; /* Float boxes to the left */
-  box-sizing: border-box; /* Include padding and border in the element's total width and height */
-  padding: 0 15px; /* Add padding to space between the boxes */
+.container2 {
+    display: flex;
+    align-items: center;
 }
 
-/* Clear float after every two boxes to maintain layout */
-.works .container ul:after {
-  content: "";
-  display: table;
-  clear: both;
+.button2 {
+    line-height: 1;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    gap: .75rem;
+    background-color: white;
+    color: #fbae19;
+    border: 1px solid black;
+    border-radius: 10rem;
+    font-weight: 600;
+    padding: .75rem 1.5rem;
+    padding-left: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: background-color .3s;
 }
 
-.project-box {
-  margin-bottom: 30px; /* Add some space between each box */
+.button2__icon-wrapper {
+    flex-shrink: 0;
+    width: 25px;
+    height: 25px;
+    position: relative;
+    color: #fbae19;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 1px solid black;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
+
 }
+
+.button2:hover {
+    background-color: #fbae19;
+    color: black;
+}
+
+.button2:hover .button2__icon-wrapper {
+    color: #000;
+}
+.button2__icon-svg{
+  padding-top: 2px;
+}
+.button2__icon-svg--copy {
+    position: absolute;
+    transform: translate(-150%, 150%);
+}
+
+.button2:hover .button2__icon-svg:first-child {
+    transition: transform .3s ease-in-out;
+    transform: translate(150%, -150%);
+}
+
+.button2:hover .button2__icon-svg--copy {
+    transition: transform .3s ease-in-out .1s;
+    transform: translate(0);
+}
+
+/* anim buton */
+
+.animated-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 29px;
+    padding-right: 29px;
+    border: 1px solid black;
+    /* border-color: transparent; */
+    font-size: 16px;
+    background-color: white;
+    border-radius: 50px;
+    font-weight: 600;
+    color: #fbae19;
+    box-shadow: 0 0 0 2px #ffffff;
+    cursor: pointer;
+    overflow: hidden;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button svg {
+    position: absolute;
+    width: 24px;
+    fill: #fbae19;
+    z-index: 9;
+    transition: all 0.8s cubic]]-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button .arr-1 {
+    right: 16px;
+}
+
+.animated-button .arr-2 {
+    left: -25%;
+}
+
+.animated-button .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    background-color: #fbae19;
+    border-radius: 50%;
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button .text2 {
+    position: relative;
+    z-index: 1;
+    transform: translateX(-12px);
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button:hover {
+    box-shadow: 0 0 0 12px transparent;
+    color: black;
+    border-radius: 12px;
+    border: 1px solid black;
+}
+
+.animated-button:hover .arr-1 {
+    right: -25%;
+}
+
+.animated-button:hover .arr-2 {
+    left: 16px;
+}
+
+.animated-button:hover .text2 {
+    transform: translateX(12px);
+}
+
+.animated-button:hover svg {
+    fill: black;
+}
+
+.animated-button:active {
+    scale: 0.95;
+    box-shadow: 0 0 0 4px black;
+}
+
+.animated-button:hover .circle {
+    width: 220px;
+    height: 220px;
+    opacity: 1;
+}
+.big-but{
+    text-align: right; 
+    padding-top: 7px;
+}
+.hd-cor{
+color: #972221; 
+font-weight: 700; 
+font-size: 2rem;
+}
+.but-mid{
+display: flex; 
+gap:.7rem; 
+justify-content: right; 
+padding-top: 6px;
+}
+
+/* Media queries for featured products css */
+
+@media only screen and (max-width: 1200px) {
+.projects-section {
+padding: 30px;
+}
+.project-details h3 {
+font-size: 1.8rem;
+}
+.image-container2 {
+width: 100%;
+}
+.image-container2 img {
+height: 50vh;
+}
+}
+
+@media only screen and (max-width: 992px) {
+.projects-section {
+padding: 20px;
+}
+.heading2s p {
+font-size: 1rem;
+}
+
+.image-container2 img {
+height: 40vh;
+}
+}
+
+@media only screen and (max-width: 768px) {
+.heading {
+text-align: center;
+}
+.heading2s {
+text-align: center;
+}
+.container2{
+display: none;
+}
+.but-mid{
+text-align: center;
+justify-content: center;
+padding-bottom: 10px;
+}
+.hd-cor{
+text-align: center;
+font-size: 1rem;
+padding-top: 5px;
+}
+.big-but{
+text-align: center;
+}
+.image-container2 {
+width: 100%;
+height: 50%;
+}
+.image-container2 img {
+height: 35vh;
+}
+.project-details h3 {
+font-size: 1.5rem;
+}
+.buttons {
+text-align: center;
+}
+.container2 {
+flex-direction: column;
+align-items: flex-start;
+}
+.box2 h2,
+.box2 h4 {
+text-align: left;
+}
+}
+
+@media only screen and (max-width: 576px) {
+.projects-section {
+padding: 15px;
+}
+.project {
+margin-top: 15px;
+}
+.project-details h3 {
+font-size: 1.3rem;
+}
+.image-container2 img {
+height: 30vh;
+}
+.container2 {
+align-items: center;
+}
+}
+
+@media only screen and (max-width: 480px) {
+.projects-section {
+padding: 10px;
+}
+.heading h4 {
+font-size: 1.5rem;
+}
+.heading h1 {
+font-size: 1.25rem;
+}
+.heading2s p {
+font-size: 0.9rem;
+}
+.image-container2 img {
+height: 25vh;
+}
+.animated-button {
+padding-top: 3px;
+padding-bottom: 3px;
+padding-left: 20px;
+padding-right: 20px;
+font-size: 14px;
+}
+.animated-button svg {
+width: 20px;
+}
+.buttons {
+text-align: center;
+}
+}
+
+
