--- a/css/contact.css
+++ b/css/contact.css
@@ -2,7 +2,7 @@
 
 /* Existing CSS */
 #contact-form-ss {
-  padding: .5rem;
+  padding: 150px;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
