--- a/css/style.css
+++ b/css/style.css
@@ -2730,7 +2730,7 @@ services
 .mil-service-card-sm {
   position: relative;
   display: block;
-  padding: 60px 30px;
+  /* padding: 60px 30px; */
   text-decoration: none;
   color: var(--maroon);
 }
@@ -2807,11 +2807,12 @@ services
 }
 
 .mil-services-grid .mil-services-grid-item {
-  border-right: solid 2px #bcb6b6
+  /* border-right: solid 2px #bcb6b6 */
+  border-bottom: solid 2px #bcb6b6
 }
 
 .mil-services-grid .mil-services-grid-item:first-child {
-  border-left: solid 2px #bcb6b6;
+  /* border-left: solid 2px #bcb6b6; */
 }
 
 @media screen and (max-width: 992px) {
@@ -4977,6 +4978,8 @@ video {
 /*  */
 .custrow {
   justify-content: center;
+  display: flex;
+  justify-content: space-around;
 }
 
 .txt-maroon {
@@ -5290,13 +5293,16 @@ video {
 }
 
 .section {
-  padding: 20px;margin-top: 19vh;
+  padding: 20px;
+  margin-top: 19vh;
 }
-@media only screen and (max-width: 768px){
-  .section{
+
+@media only screen and (max-width: 768px) {
+  .section {
     margin-top: 0;
   }
 }
+
 .section h2 {}
 
 ul {
@@ -5386,7 +5392,8 @@ ul {
   margin-bottom: 2px;
   padding: 15px;
   border-radius: 0;
-  overflow: hidden; /* To clip the pseudo-element */
+  overflow: hidden;
+  /* To clip the pseudo-element */
   box-sizing: border-box;
 }
 
@@ -5399,15 +5406,18 @@ ul {
   height: 100%;
   background-color: #f89c1f;
   border-radius: 50%;
-  transform: scale(0); /* Initially scaled down to be invisible */
+  transform: scale(0);
+  /* Initially scaled down to be invisible */
   transform-origin: top left;
   transition: transform 0.5s ease, border-radius 0.5s ease;
   z-index: 0;
 }
 
 .service-box:hover::before {
-  transform: scale(1); /* Scale up to full size on hover */
-  border-radius: 0; /* Transition to rectangle */
+  transform: scale(1);
+  /* Scale up to full size on hover */
+  border-radius: 0;
+  /* Transition to rectangle */
 }
 
 .service-box:hover h3,
@@ -5440,14 +5450,16 @@ ul {
 
 @media (max-width: 768px) {
   .service-box {
-      width: calc(50% - 22px); /* Adjusted width to account for 2px margin */
-      margin-bottom: 20px;
+    width: calc(50% - 22px);
+    /* Adjusted width to account for 2px margin */
+    margin-bottom: 20px;
   }
 }
 
 @media (max-width: 480px) {
   .service-box {
-    width: calc(100% - 22px); /* Adjusted width to account for 2px margin */
+    width: calc(100% - 22px);
+    /* Adjusted width to account for 2px margin */
   }
 }
 
@@ -5468,375 +5480,406 @@ ul {
 
 
 .projects-section {
-    padding: 40px;
-    font-family: "Outfit", sans-serif;
+  padding: 40px;
+  font-family: "Outfit", sans-serif;
 }
 
 .heading2s {
-    text-align: right;
+  text-align: right;
 }
 
 .divider {
-    width: 0%;
-    border-bottom: 2px solid black;
-    clear: both;
-    padding-top: 2px;
-    padding-bottom: 8px;
-    transition: width 3s ease;
+  width: 0%;
+  border-bottom: 2px solid black;
+  clear: both;
+  padding-top: 2px;
+  padding-bottom: 8px;
+  transition: width 3s ease;
 }
 
 .divider.animated {
-    width: 100%;
+  width: 100%;
 }
 
 .project {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .project-details {
-    flex: 1;
-    margin-right: 20px;
-    /* padding-left: 8%; */
-    text-align: justify;
+  flex: 1;
+  margin-right: 20px;
+  /* padding-left: 8%; */
+  text-align: justify;
 }
 
 .project-details h3 {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .buttons {
-    text-align: right;
+  text-align: right;
 }
 
 .image-container2 {
-    flex: 1;
-    text-align: right;
-    border-radius: 15px;
-    overflow: hidden;
-    position: relative;
-    width: 90%;
-    margin-left: auto;
+  flex: 1;
+  text-align: right;
+  border-radius: 15px;
+  overflow: hidden;
+  position: relative;
+  width: 90%;
+  margin-left: auto;
 }
 
 .image-container2 img {
-    width: 100%;
-    border-radius: 15px;
-    position: relative;
-    transition: transform 0.3s ease;
+  width: 100%;
+  border-radius: 15px;
+  position: relative;
+  transition: transform 0.3s ease;
 }
 
 .image-container2:hover img {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 
 
 .location-year {
-    clear: both;
-    margin-top: 10px;
+  clear: both;
+  margin-top: 10px;
 }
 
 .location-year p {
-    margin: 0;
+  margin: 0;
 }
 
 .container2 {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .button2 {
-    line-height: 1;
-    text-decoration: none;
-    display: inline-flex;
-    align-items: center;
-    gap: .75rem;
-    background-color: white;
-    color: #fbae19;
-    border: 1px solid black;
-    border-radius: 10rem;
-    font-weight: 600;
-    padding: .75rem 1.5rem;
-    padding-left: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    transition: background-color .3s;
+  line-height: 1;
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  gap: .75rem;
+  background-color: white;
+  color: #fbae19;
+  border: 1px solid black;
+  border-radius: 10rem;
+  font-weight: 600;
+  padding: .75rem 1.5rem;
+  padding-left: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: background-color .3s;
 }
 
 .button2__icon-wrapper {
-    flex-shrink: 0;
-    width: 25px;
-    height: 25px;
-    position: relative;
-    color: #fbae19;
-    background-color: #fff;
-    border-radius: 50%;
-    border: 1px solid black;
-    display: grid;
-    place-items: center;
-    overflow: hidden;
+  flex-shrink: 0;
+  width: 25px;
+  height: 25px;
+  position: relative;
+  color: #fbae19;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
 
 }
 
 .button2:hover {
-    background-color: #fbae19;
-    color: black;
+  background-color: #fbae19;
+  color: black;
 }
 
 .button2:hover .button2__icon-wrapper {
-    color: #000;
+  color: #000;
 }
-.button2__icon-svg{
+
+.button2__icon-svg {
   padding-top: 2px;
 }
+
 .button2__icon-svg--copy {
-    position: absolute;
-    transform: translate(-150%, 150%);
+  position: absolute;
+  transform: translate(-150%, 150%);
 }
 
 .button2:hover .button2__icon-svg:first-child {
-    transition: transform .3s ease-in-out;
-    transform: translate(150%, -150%);
+  transition: transform .3s ease-in-out;
+  transform: translate(150%, -150%);
 }
 
 .button2:hover .button2__icon-svg--copy {
-    transition: transform .3s ease-in-out .1s;
-    transform: translate(0);
+  transition: transform .3s ease-in-out .1s;
+  transform: translate(0);
 }
 
 /* anim buton */
 
 .animated-button {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 29px;
-    padding-right: 29px;
-    border: 1px solid black;
-    /* border-color: transparent; */
-    font-size: 16px;
-    background-color: white;
-    border-radius: 50px;
-    font-weight: 600;
-    color: #fbae19;
-    box-shadow: 0 0 0 2px #ffffff;
-    cursor: pointer;
-    overflow: hidden;
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 29px;
+  padding-right: 29px;
+  border: 1px solid black;
+  /* border-color: transparent; */
+  font-size: 16px;
+  background-color: white;
+  border-radius: 50px;
+  font-weight: 600;
+  color: #fbae19;
+  box-shadow: 0 0 0 2px #ffffff;
+  cursor: pointer;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .animated-button svg {
-    position: absolute;
-    width: 24px;
-    fill: #fbae19;
-    z-index: 9;
-    transition: all 0.8s cubic]]-bezier(0.23, 1, 0.32, 1);
+  position: absolute;
+  width: 24px;
+  fill: #fbae19;
+  z-index: 9;
+  transition: all 0.8s cubic]]-bezier(0.23, 1, 0.32, 1);
 }
 
 .animated-button .arr-1 {
-    right: 16px;
+  right: 16px;
 }
 
 .animated-button .arr-2 {
-    left: -25%;
+  left: -25%;
 }
 
 .animated-button .circle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 20px;
-    height: 20px;
-    background-color: #fbae19;
-    border-radius: 50%;
-    opacity: 0;
-    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+  background-color: #fbae19;
+  border-radius: 50%;
+  opacity: 0;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .animated-button .text2 {
-    position: relative;
-    z-index: 1;
-    transform: translateX(-12px);
-    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  position: relative;
+  z-index: 1;
+  transform: translateX(-12px);
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .animated-button:hover {
-    box-shadow: 0 0 0 12px transparent;
-    color: black;
-    border-radius: 12px;
-    border: 1px solid black;
+  box-shadow: 0 0 0 12px transparent;
+  color: black;
+  border-radius: 12px;
+  border: 1px solid black;
 }
 
 .animated-button:hover .arr-1 {
-    right: -25%;
+  right: -25%;
 }
 
 .animated-button:hover .arr-2 {
-    left: 16px;
+  left: 16px;
 }
 
 .animated-button:hover .text2 {
-    transform: translateX(12px);
+  transform: translateX(12px);
 }
 
 .animated-button:hover svg {
-    fill: black;
+  fill: black;
 }
 
 .animated-button:active {
-    scale: 0.95;
-    box-shadow: 0 0 0 4px black;
+  scale: 0.95;
+  box-shadow: 0 0 0 4px black;
 }
 
 .animated-button:hover .circle {
-    width: 220px;
-    height: 220px;
-    opacity: 1;
+  width: 220px;
+  height: 220px;
+  opacity: 1;
 }
-.big-but{
-    text-align: right; 
-    padding-top: 7px;
+
+.big-but {
+  text-align: right;
+  padding-top: 7px;
 }
-.hd-cor{
-color: #972221; 
-font-weight: 700; 
-font-size: 2rem;
+
+.hd-cor {
+  color: #972221;
+  font-weight: 700;
+  font-size: 2rem;
 }
-.but-mid{
-display: flex; 
-gap:.7rem; 
-justify-content: right; 
-padding-top: 6px;
+
+.but-mid {
+  display: flex;
+  gap: .7rem;
+  justify-content: right;
+  padding-top: 6px;
 }
 
 /* Media queries for featured products css */
 
 @media only screen and (max-width: 1200px) {
-.projects-section {
-padding: 30px;
-}
-.project-details h3 {
-font-size: 1.8rem;
-}
-.image-container2 {
-width: 100%;
-}
-.image-container2 img {
-height: 50vh;
-}
+  .projects-section {
+    padding: 30px;
+  }
+
+  .project-details h3 {
+    font-size: 1.8rem;
+  }
+
+  .image-container2 {
+    width: 100%;
+  }
+
+  .image-container2 img {
+    height: 50vh;
+  }
 }
 
 @media only screen and (max-width: 992px) {
-.projects-section {
-padding: 20px;
-}
-.heading2s p {
-font-size: 1rem;
-}
+  .projects-section {
+    padding: 20px;
+  }
 
-.image-container2 img {
-height: 40vh;
-}
+  .heading2s p {
+    font-size: 1rem;
+  }
+
+  .image-container2 img {
+    height: 40vh;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-.heading {
-text-align: center;
-}
-.heading2s {
-text-align: center;
-}
-.container2{
-display: none;
-}
-.but-mid{
-text-align: center;
-justify-content: center;
-padding-bottom: 10px;
-}
-.hd-cor{
-text-align: center;
-font-size: 1rem;
-padding-top: 5px;
-}
-.big-but{
-text-align: center;
-}
-.image-container2 {
-width: 100%;
-height: 50%;
-}
-.image-container2 img {
-height: 35vh;
-}
-.project-details h3 {
-font-size: 1.5rem;
-}
-.buttons {
-text-align: center;
-}
-.container2 {
-flex-direction: column;
-align-items: flex-start;
-}
-.box2 h2,
-.box2 h4 {
-text-align: left;
-}
+  .heading {
+    text-align: center;
+  }
+
+  .heading2s {
+    text-align: center;
+  }
+
+  .container2 {
+    display: none;
+  }
+
+  .but-mid {
+    text-align: center;
+    justify-content: center;
+    padding-bottom: 10px;
+  }
+
+  .hd-cor {
+    text-align: center;
+    font-size: 1rem;
+    padding-top: 5px;
+  }
+
+  .big-but {
+    text-align: center;
+  }
+
+  .image-container2 {
+    width: 100%;
+    height: 50%;
+  }
+
+  .image-container2 img {
+    height: 35vh;
+  }
+
+  .project-details h3 {
+    font-size: 1.5rem;
+  }
+
+  .buttons {
+    text-align: center;
+  }
+
+  .container2 {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .box2 h2,
+  .box2 h4 {
+    text-align: left;
+  }
 }
 
 @media only screen and (max-width: 576px) {
-.projects-section {
-padding: 15px;
-}
-.project {
-margin-top: 15px;
-}
-.project-details h3 {
-font-size: 1.3rem;
-}
-.image-container2 img {
-height: 30vh;
-}
-.container2 {
-align-items: center;
-}
+  .projects-section {
+    padding: 15px;
+  }
+
+  .project {
+    margin-top: 15px;
+  }
+
+  .project-details h3 {
+    font-size: 1.3rem;
+  }
+
+  .image-container2 img {
+    height: 30vh;
+  }
+
+  .container2 {
+    align-items: center;
+  }
 }
 
 @media only screen and (max-width: 480px) {
-.projects-section {
-padding: 10px;
-}
-.heading h4 {
-font-size: 1.5rem;
-}
-.heading h1 {
-font-size: 1.25rem;
-}
-.heading2s p {
-font-size: 0.9rem;
-}
-.image-container2 img {
-height: 25vh;
-}
-.animated-button {
-padding-top: 3px;
-padding-bottom: 3px;
-padding-left: 20px;
-padding-right: 20px;
-font-size: 14px;
-}
-.animated-button svg {
-width: 20px;
-}
-.buttons {
-text-align: center;
-}
+  .projects-section {
+    padding: 10px;
+  }
+
+  .heading h4 {
+    font-size: 1.5rem;
+  }
+
+  .heading h1 {
+    font-size: 1.25rem;
+  }
+
+  .heading2s p {
+    font-size: 0.9rem;
+  }
+
+  .image-container2 img {
+    height: 25vh;
+  }
+
+  .animated-button {
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 14px;
+  }
+
+  .animated-button svg {
+    width: 20px;
+  }
+
+  .buttons {
+    text-align: center;
+  }
 }
 
 
@@ -5861,10 +5904,12 @@ text-align: center;
 .footer-distributed .footer-left {
   width: 30%;
 }
-.footer-logo{
+
+.footer-logo {
   width: auto;
   height: 5vh;
 }
+
 .footer-distributed .footer-logo {
   margin-bottom: 20px;
 }
@@ -5958,7 +6003,7 @@ text-align: center;
   width: 35px;
   height: 35px;
   cursor: pointer;
-  background-color:grey;
+  background-color: grey;
   border-radius: 50%;
   font-size: 20px;
   color: black;
@@ -5976,16 +6021,29 @@ text-align: center;
 }
 
 @media (max-width: 880px) {
+
   .footer-distributed .footer-left,
   .footer-distributed .footer-center,
   .footer-distributed .footer-right {
-      display: block;
-      width: 100%;
-      margin-bottom: 40px;
-      text-align: center;
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
   }
 
   .footer-distributed .footer-center i {
-      margin-left: 0;
+    margin-left: 0;
+  }
+}
+
+/* screen problem css */
+
+@media screen and (max-width: 1366px) and (max-height: 768px) {
+  .mil-circle-text {
+    display: none;
+  }
+
+  .mil-button {
+    display: none;
   }
 }
