--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   font-weight: 300;
   color: rgba(0, 0, 0, 0.5);
@@ -126,7 +126,7 @@ body {
 
 /* font family inter */
 .inter-mil-h5 {
-  font-family: "Inter", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
@@ -224,7 +224,7 @@ h5,
 .mil-h5,
 h6,
 .mil-h6 {
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: rgb(0, 0, 0);
   font-weight: 500;
   line-height: 120%;
@@ -834,7 +834,7 @@ textarea {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 500;
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: rgb(0, 0, 0);
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
@@ -2776,11 +2776,11 @@ services
   transition: 0.6s cubic-bezier(0, 0, 0.3642, 1);
 }
 
-.mil-service-card-sm:hover p {
+/* .mil-service-card-sm:hover p {
   opacity: 1;
   -webkit-transform: translateY(0);
   transform: translateY(0);
-}
+} */
 
 .mil-service-card-sm:hover .mil-button {
   -webkit-transform: scale(1);
@@ -3575,7 +3575,7 @@ footer
 
 .mil-subscribe-form input::-webkit-input-placeholder {
   color: rgb(128, 128, 128);
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
   font-weight: 500;
   text-transform: uppercase;
@@ -3584,7 +3584,7 @@ footer
 
 .mil-subscribe-form input::-moz-placeholder {
   color: rgb(128, 128, 128);
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
   font-weight: 500;
   text-transform: uppercase;
@@ -3593,7 +3593,7 @@ footer
 
 .mil-subscribe-form input:-ms-input-placeholder {
   color: rgb(128, 128, 128);
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
   font-weight: 500;
   text-transform: uppercase;
@@ -3602,7 +3602,7 @@ footer
 
 .mil-subscribe-form input::-ms-input-placeholder {
   color: rgb(128, 128, 128);
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
   font-weight: 500;
   text-transform: uppercase;
@@ -3611,7 +3611,7 @@ footer
 
 .mil-subscribe-form input::placeholder {
   color: rgb(128, 128, 128);
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
   font-weight: 500;
   text-transform: uppercase;
@@ -5031,7 +5031,7 @@ video {
 }
 
 #container-fp .primary-heading-box h1 {
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 3.5rem;
   font-weight: 600;
   color: var(--maroon);
@@ -5087,7 +5087,7 @@ video {
 
 .feature-work-name {
   font-size: 1.5rem;
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
 }
 
@@ -5105,7 +5105,7 @@ video {
   border-radius: 67px;
   font-size: .9rem;
   text-transform: capitalize;
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 500;
 }
 
@@ -5583,7 +5583,7 @@ ul {
 
 .projects-section {
   padding: 40px;
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .heading2s {
@@ -6380,7 +6380,7 @@ ul {
   padding: 30px;
   margin: 0;
   padding: 30px;
-  font-family: 'Outfit', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: whitesmoke;
 }
 
