slider issues solve-desighn page

--- a/css/style.css
+++ b/css/style.css
@@ -5410,6 +5410,7 @@ html.is-animating .mil-menu-frame {
 /* section */
 
 .container-sid {
+  background-color: white;
   display: flex;
   flex-direction: column;
   padding: 2rem 2rem;
